--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -40,6 +40,12 @@
     width: 30px;
 }
 
+.containerCards
+{
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+
 @media screen and (min-width: 667px) {
     .cards-wrapper {
         display: flex;
@@ -85,4 +91,63 @@
         align-items: center;
         justify-content: center;
     }
+}
+
+/*-------------------------- CARRUSEL DE ZAPATOS ------------------*/
+
+.containerCards {
+    width: 99vw;
+}
+
+@media screen and (max-width: 1100px) {
+    #cardC {
+        margin: 15px;
+        margin-left: 30px;
+        width: calc(80%/1);
+    }
+
+    .image-wrapper2 img {
+        width: calc(80%/1);
+        height: 30vh;
+        object-fit: cover;
+    }
+
+    .image-wrapper2 {
+        height: 30vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #F6F6F6;
+    }
+}
+
+@media screen and (min-width: 1101px) {
+    #cardC {
+        margin: 15px;
+        margin-left: 30px;
+        width: calc(90%/3);
+    }
+
+
+    .image-wrapper2 img {
+        width: 30vw;
+        height: 50vh;
+        object-fit: cover;
+    }
+
+    .image-wrapper2 {
+        background-color: #F6F6F6;
+        height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+}
+
+.lineImgC
+{
+    background-color: #1591CC;
+    width: 100%;
+    height: 4px;
 }
