--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -40,8 +40,7 @@
     width: 30px;
 }
 
-.containerCards
-{
+.containerCards {
     overflow-y: hidden;
     overflow-x: auto;
 }
@@ -117,7 +116,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #F6F6F6;
+        background-color: #ADAFAB;
     }
 }
 
@@ -145,8 +144,7 @@
 
 }
 
-.lineImgC
-{
+.lineImgC {
     background-color: #1591CC;
     width: 100%;
     height: 4px;
