--- a/recursos/estilos/publico/detalle_zapato.css
+++ b/recursos/estilos/publico/detalle_zapato.css
@@ -12,8 +12,7 @@
     height: 100%;
 }
 
-.contenedorImg
-{
+.contenedorImg {
     width: 100%;
     height: 20%;
     overflow: hidden;
@@ -31,26 +30,65 @@
     object-fit: cover;
 }
 
-.titleReseñas
-{
+.titleReseñas {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     max-height: fit-content;
     left: 0;
 }
 
-.contenedorComentarios
-{
+.contenedorComentarios {
     overflow-x: hidden;
     overflow-y: auto;
     min-height: 550px;
     max-height: 550px;
 }
 
-.comentario
-{
+.comentario {
     border-bottom: 0px solid gray;
     border-radius: 15px;
+}
+
+.comentarioBody {
+    margin-left: 55px;
+}
+
+.comentarioDesc {
+    margin-left: 20px;
+}
+
+.comentarioFooter {
+    margin-right: 20px;
+}
+
+.estrellasImg {
+    display: block;
+}
+
+.estrellasNum {
+    display: none;
+}
+
+@media screen and (max-width: 380px) {
+    .comentarioBody {
+        margin-left: 0px;
+    }
+
+    .comentarioDesc {
+        margin-left: 0px;
+    }
+
+    .comentarioFooter {
+        margin-right: 0px;
+    }
+
+    .estrellasImg {
+        display: none;
+    }
+
+    .estrellasNum {
+        display: block;
+    }
 }
 
 .circuloColor {
