--- a/recursos/estilos/publico/detalle_zapato.css
+++ b/recursos/estilos/publico/detalle_zapato.css
@@ -94,20 +94,45 @@
     .estrellasNum {
         display: block;
     }
+
     .columna2 {
         padding-left: 0px;
     }
 }
 
-.circuloColor {
-    width: 25px;
-    height: 25px;
-    margin: 10px;
-    border-radius: 100px;
-}
-
-.contenedorTallas
-{
+.contenedorTallas {
     background-color: white;
 
+}
+
+.contenedorFilaTallas {
+    border-radius: 5px;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: min-content;
+    max-height: 320px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.cuadradoTalla {
+    background-color: white;
+    border: 1px solid #5F5F5F;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin: 10px;
+    width: 60px;
+    height: 60px;
+    transition: .3s ease-in-out;
+}
+
+.cuadradoTalla:hover {
+    transform: translateY(-5px);
+    transition-property: transform;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    background-color: #EDEDED;
 }
