--- a/recursos/estilos/publico/detalle_zapato.css
+++ b/recursos/estilos/publico/detalle_zapato.css
@@ -100,6 +100,17 @@
     }
 }
 
+@media screen and (max-width: 767px) {
+    .contenedor1 {
+        flex-wrap: wrap-reverse;
+    }
+}
+
+.contenedor1 {
+    display: flex;
+    flex-direction: row;
+}
+
 .contenedorTallas {
     background-color: white;
 
