--- a/recursos/estilos/publico/detalle_zapato.css
+++ b/recursos/estilos/publico/detalle_zapato.css
@@ -147,3 +147,39 @@
     transition-delay: 0s;
     background-color: #EDEDED;
 }
+
+/*----------------------------------- SWEET ALERT ---------------------------- */
+.title {
+    color: #4A4B4D;
+}
+
+.lineaIzq {
+    height: 100%;
+    width: 15px;
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.contenedorImg {
+    width: 100%;
+    height: fit-content;
+}
+
+.imgHombre {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.contenedorCuerpo {
+    align-items: center;
+    height: fit-content;
+}
+
+.btn2 {
+    background-color: white;
+    color: black;
+    border: 1px solid #EDEDED;
+}
