--- a/recursos/estilos/publico/detalle_zapato.css
+++ b/recursos/estilos/publico/detalle_zapato.css
@@ -4,7 +4,6 @@
     width: 100%;
     flex: 1;
     display: flex;
-    padding: 30px;
 }
 
 .columna1,
@@ -96,7 +95,7 @@
     }
 
     .columna2 {
-        padding-left: 0px;
+        padding-left: 10px;
     }
 }
 
@@ -146,6 +145,66 @@
     transition-timing-function: ease;
     transition-delay: 0s;
     background-color: #EDEDED;
+}
+
+/*----------------------------------- CARRUSEL ---------------------------- */
+
+.containerCards {
+    width: 100%;
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+
+@media screen and (max-width: 1100px) {
+    #cardC {
+        margin: 15px;
+        margin-left: 25px;
+        width: calc(80%/1);
+    }
+
+    .image-wrapper2 img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .image-wrapper2 {
+        height: 30vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #ADAFAB;
+    }
+}
+
+@media screen and (min-width: 1101px) {
+    #cardC {
+        margin: 15px;
+        margin-left: 25px;
+        width: calc(90%/3);
+    }
+
+
+    .image-wrapper2 img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .image-wrapper2 {
+        background-color: #F6F6F6;
+        height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+}
+
+.lineImgC {
+    background-color: #1591CC;
+    width: 100%;
+    height: 4px;
 }
 
 /*----------------------------------- SWEET ALERT ---------------------------- */
