--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -63,7 +63,6 @@
     }
 
     .image-wrapper img {
-
         width: 16vw;
         height: 16vw;
     }
@@ -106,8 +105,8 @@
     }
 
     .image-wrapper2 img {
-        width: calc(80%/1);
-        height: 30vh;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
     }
 
@@ -129,8 +128,8 @@
 
 
     .image-wrapper2 img {
-        width: 30vw;
-        height: 50vh;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
     }
 
