--- a/recursos/estilos/publico/carrito.css
+++ b/recursos/estilos/publico/carrito.css
@@ -27,3 +27,15 @@
     width: 100%;
     border-radius: 20px;
 }
+
+#Botoncomprar{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px
+}
+
+.imgHombre {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
