--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -67,11 +67,11 @@
     border-bottom-right-radius: 50px;
 }
 
-.ContenedorTotal {
+.ContenedorTotalA1 {
     display: flex;
     flex: 1;
     flex-direction: column;
-    width: 100%;
+    width: 80%;
     height: 100%;
 }
 
@@ -371,12 +371,7 @@ h4 {
     margin-bottom: 15px;
 }
 
-.ContenedorB2 {
-    display: flex;
-    flex: 1;
-    justify-content: flex-start;
-    z-index: 3;
-}
+
 
 .contenedor1A,
 .contenedor2 {
@@ -386,14 +381,14 @@ h4 {
 }
 
 .tab-pane1 {
-    padding: 10px;
-    min-width: 100%;
-    min-height: fit-content;
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
 }
 
 .ContenedorForm {
     background-color: white;
-    width: 70%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex: 1;
@@ -407,6 +402,15 @@ h4 {
     margin-bottom: 30px;
     padding-left: 40px;
     padding-right: 40px;
+}
+
+/* Estilos para form-control */
+.form-control {
+    border: #146A93 solid 1px;
+}
+
+.form-select {
+    border: #146A93 solid 1px;
 }
 
 .F1 {
@@ -562,11 +566,16 @@ h4 {
 }
 
 .contenedorBotones1A {
+    
+    left: 0;
     display: flex;
     flex-direction: row;
-    justify-self: center;
-    align-self: center;
-    align-content: center;
     justify-content: center;
-    align-items: center;
+}
+.contenedorBotones1A {
+    width: 100%;
+    min-height: fit-content;
+    max-height: fit-content;
+    position: absolute;
+    bottom: -1%;
 }
