--- a/recursos/estilos/fuentes.css
+++ b/recursos/estilos/fuentes.css
@@ -18,6 +18,10 @@
     background-color: #ffffff;
 }
 
+.bg-color-1gray{
+    background-color: #A7A7A7;
+}
+
 .color-1blue {
     color: #1591CC;
 }
