--- a/recursos/estilos/publico/carrito.css
+++ b/recursos/estilos/publico/carrito.css
@@ -23,12 +23,12 @@
 }
 
 /*BOTON*/
-#comprar{
+#comprar {
     width: 100%;
     border-radius: 20px;
 }
 
-#Botoncomprar{
+#Botoncomprar {
     width: 100%;
     height: 100%;
     border-radius: 20px
@@ -38,4 +38,39 @@
     width: 100%;
     object-fit: cover;
     border-radius: 5px;
+}
+
+.figuraI1 {
+    top: 0;
+    right: 0;
+    height: 500px;
+    display: none;
+}
+
+.figuraI2 {
+    bottom: 0;
+    left: 0;
+    height: 700px;
+    display: none;
+}
+
+@media screen and (min-width: 992px) {
+    .figuraI1 {
+        display: block;
+    }
+
+    .figuraI2 {
+        display: block;
+    }
+}
+
+.imgBasura
+{
+    width: 30px;
+    height: 25px;
+    object-fit: cover;
+}
+
+.tabla_contenedor{
+    overflow-x: auto;
 }
